--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,7 @@
   "description": "a simple meal booking api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,18 @@
   "bugs": {
     "url": "https://github.com/olatunjiagboola/MealBookingApp/issues"
   },
-  "homepage": "https://github.com/olatunjiagboola/MealBookingApp#readme"
+  "homepage": "https://github.com/olatunjiagboola/MealBookingApp#readme",
+  "dependencies": {
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-cli": "^6.26.0",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "nodemon": "^1.18.10"
+  }
 }
