--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ script:
   - npm run test
 after_success:
   - npm run coverage
+env: 
+  global:
+    - CODECLIMATE_REPO_TOKEN=c8f435267cefdba7a1fcb2c1177162d26d57b866e9d9fd594e6af0d98d5997e8
