--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "babel -d ./build ./api -s",
     "dev": "nodemon --exec babel-node ./api/index.js",
     "test": "nyc mocha --require @babel/register API/test/*.js --exit",
-    "coverage": "nyc report --reporter=lcov --reporter=text-lcov | coveralls"
+    "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
+    "coveralls-coverage": "coveralls < lcov.info", 
+    "codeclimate-coverage": "codeclimate-test-reporter < lcov.info",
+    "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage && npm run codeclimate-coverage"
   },
   "repository": {
     "type": "git",
