--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   "homepage": "https://github.com/olatunjiagboola/MealBookingApp#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "pg": "^7.8.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.43.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
